crates/ynz-codegen/tests/snapshots/golden__v03_m2_non_sm_caller_block_on_ir.snap
---
source: crates/ynz-codegen/tests/golden.rs
expression: ir
---
; ModuleID = 'ynz-v03m2_non_sm_caller.ynz'
source_filename = "ynz-v03m2_non_sm_caller.ynz"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-i128:128-f80:128-n8:16:32:64-S128"
target triple = "x86_64-pc-linux-gnu"

declare ptr @ynz_alloc_zeroed(i64) local_unnamed_addr

declare void @ynz_free(ptr, i64) local_unnamed_addr

declare void @ynz_siphash_init() local_unnamed_addr

declare void @ynz_rt_init() local_unnamed_addr

declare void @ynz_rt_shutdown() local_unnamed_addr

declare ptr @ynz_rt_async_sleep_create(i64) local_unnamed_addr

declare i32 @ynz_rt_async_sleep_poll(ptr, ptr) local_unnamed_addr

declare i32 @ynz_rt_run_entrypoint(ptr, ptr, i64) local_unnamed_addr

define noundef i32 @ynz_sm_sleeper_resume(ptr nocapture %0, ptr %1) {
sm_entry:
  %rp = load i32, ptr %0, align 4
  switch i32 %rp, label %common.ret [
    i32 0, label %sm_s0
    i32 1, label %sm_s1
  ]

sm_s0:                                            ; preds = %sm_entry
  %sleep_handle = tail call ptr @ynz_rt_async_sleep_create(i64 100)
  %first_poll = tail call i32 @ynz_rt_async_sleep_poll(ptr %sleep_handle, ptr %1)
  %first_is_ready = icmp eq i32 %first_poll, 0
  br i1 %first_is_ready, label %sm_post_wait, label %sm_suspend

sm_s1:                                            ; preds = %sm_entry
  %h_slot = getelementptr i8, ptr %0, i64 8
  %sleep_handle1 = load ptr, ptr %h_slot, align 8
  %poll = tail call i32 @ynz_rt_async_sleep_poll(ptr %sleep_handle1, ptr %1)
  %is_ready = icmp eq i32 %poll, 0
  br i1 %is_ready, label %sm_post_wait, label %common.ret

common.ret:                                       ; preds = %sm_suspend, %sm_s1, %sm_entry, %sm_post_wait
  %common.ret.op = phi i32 [ 0, %sm_post_wait ], [ 0, %sm_entry ], [ 1, %sm_s1 ], [ 1, %sm_suspend ]
  ret i32 %common.ret.op

sm_post_wait:                                     ; preds = %sm_s1, %sm_s0
  %h_slot_wr2 = getelementptr i8, ptr %0, i64 8
  tail call void @llvm.memset.p0.i64(ptr noundef nonnull align 8 dereferenceable(16) %h_slot_wr2, i8 0, i64 16, i1 false)
  br label %common.ret

sm_suspend:                                       ; preds = %sm_s0
  %h_slot_wr = getelementptr i8, ptr %0, i64 8
  store ptr %sleep_handle, ptr %h_slot_wr, align 8
  store i32 1, ptr %0, align 4
  br label %common.ret
}

define noundef i32 @ynz_sm_entrypoint_resume(ptr nocapture %0, ptr %1) {
sm_entry:
  %rp = load i32, ptr %0, align 4
  switch i32 %rp, label %common.ret [
    i32 0, label %sm_s0.i
    i32 1, label %sm_s1
  ]

sm_s0.i:                                          ; preds = %sm_entry
  %cf_sleeper = getelementptr i8, ptr %0, i64 32
  store i32 0, ptr %cf_sleeper, align 4
  %h_slot_wr = getelementptr i8, ptr %0, i64 40
  store ptr null, ptr %h_slot_wr, align 8
  %sleep_handle.i = tail call ptr @ynz_rt_async_sleep_create(i64 100)
  %first_poll.i = tail call i32 @ynz_rt_async_sleep_poll(ptr %sleep_handle.i, ptr %1)
  %first_is_ready.i = icmp eq i32 %first_poll.i, 0
  br i1 %first_is_ready.i, label %sm_post_call.sink.split, label %sm_call_suspend

sm_s1:                                            ; preds = %sm_entry
  %cf_sleeper_re = getelementptr i8, ptr %0, i64 32
  %rp.i2 = load i32, ptr %cf_sleeper_re, align 4
  switch i32 %rp.i2, label %sm_post_call [
    i32 0, label %sm_s0.i11
    i32 1, label %sm_s1.i3
  ]

sm_s0.i11:                                        ; preds = %sm_s1
  %sleep_handle.i12 = tail call ptr @ynz_rt_async_sleep_create(i64 100)
  %first_poll.i13 = tail call i32 @ynz_rt_async_sleep_poll(ptr %sleep_handle.i12, ptr %1)
  %first_is_ready.i14 = icmp eq i32 %first_poll.i13, 0
  br i1 %first_is_ready.i14, label %sm_post_wait.i9, label %sm_suspend.i15

sm_s1.i3:                                         ; preds = %sm_s1
  %h_slot.i4 = getelementptr i8, ptr %0, i64 40
  %sleep_handle1.i5 = load ptr, ptr %h_slot.i4, align 8
  %poll.i6 = tail call i32 @ynz_rt_async_sleep_poll(ptr %sleep_handle1.i5, ptr %1)
  %is_ready.i7 = icmp eq i32 %poll.i6, 0
  br i1 %is_ready.i7, label %sm_post_wait.i9, label %sm_still_pending

sm_post_wait.i9:                                  ; preds = %sm_s1.i3, %sm_s0.i11
  %h_slot_wr2.i10 = getelementptr i8, ptr %0, i64 40
  br label %sm_post_call.sink.split

sm_suspend.i15:                                   ; preds = %sm_s0.i11
  %h_slot_wr.i16 = getelementptr i8, ptr %0, i64 40
  store ptr %sleep_handle.i12, ptr %h_slot_wr.i16, align 8
  store i32 1, ptr %cf_sleeper_re, align 4
  br label %sm_still_pending

common.ret:                                       ; preds = %sm_call_suspend, %sm_still_pending, %sm_entry, %sm_post_call
  %common.ret.op = phi i32 [ 0, %sm_post_call ], [ 0, %sm_entry ], [ 1, %sm_still_pending ], [ 1, %sm_call_suspend ]
  ret i32 %common.ret.op

sm_post_call.sink.split:                          ; preds = %sm_s0.i, %sm_post_wait.i9
  %h_slot_wr2.i10.sink = phi ptr [ %h_slot_wr2.i10, %sm_post_wait.i9 ], [ %h_slot_wr, %sm_s0.i ]
  tail call void @llvm.memset.p0.i64(ptr noundef nonnull align 8 dereferenceable(16) %h_slot_wr2.i10.sink, i8 0, i64 16, i1 false)
  br label %sm_post_call

sm_post_call:                                     ; preds = %sm_post_call.sink.split, %sm_s1
  %ret_slot_ptr1 = getelementptr i8, ptr %0, i64 16
  store i64 0, ptr %ret_slot_ptr1, align 8
  br label %common.ret

sm_call_suspend:                                  ; preds = %sm_s0.i
  store ptr %sleep_handle.i, ptr %h_slot_wr, align 8
  store i32 1, ptr %cf_sleeper, align 4
  store i32 1, ptr %0, align 4
  br label %common.ret

sm_still_pending:                                 ; preds = %sm_suspend.i15, %sm_s1.i3
  store i32 1, ptr %0, align 4
  br label %common.ret
}

define void @sleeper() local_unnamed_addr {
entry:
  %sm_frame = tail call ptr @ynz_alloc_zeroed(i64 32)
  %h_slot_wr = getelementptr i8, ptr %sm_frame, i64 8
  store ptr null, ptr %h_slot_wr, align 8
  store i32 0, ptr %sm_frame, align 4
  %sm_drive = tail call i32 @ynz_rt_run_entrypoint(ptr nonnull @ynz_sm_sleeper_resume, ptr nonnull %sm_frame, i64 32)
  tail call void @ynz_free(ptr nonnull %sm_frame, i64 32)
  ret void
}

define i32 @main() local_unnamed_addr {
entry:
  tail call void @ynz_siphash_init()
  tail call void @ynz_rt_init()
  %sm_frame = tail call ptr @ynz_alloc_zeroed(i64 64)
  %h_slot_wr = getelementptr i8, ptr %sm_frame, i64 8
  store ptr null, ptr %h_slot_wr, align 8
  store i32 0, ptr %sm_frame, align 4
  %sm_drive = tail call i32 @ynz_rt_run_entrypoint(ptr nonnull @ynz_sm_entrypoint_resume, ptr nonnull %sm_frame, i64 64)
  %ret_slot_ptr = getelementptr i8, ptr %sm_frame, i64 16
  %exit_i64 = load i64, ptr %ret_slot_ptr, align 8
  tail call void @ynz_free(ptr nonnull %sm_frame, i64 64)
  tail call void @ynz_rt_shutdown()
  %exit_i32 = trunc i64 %exit_i64 to i32
  ret i32 %exit_i32
}

; Function Attrs: nocallback nofree nounwind willreturn memory(argmem: write)
declare void @llvm.memset.p0.i64(ptr nocapture writeonly, i8, i64, i1 immarg) #0

attributes #0 = { nocallback nofree nounwind willreturn memory(argmem: write) }
